deleted exception throwing